fix spacing for smaller laptop screens

--- a/packages/app/styles/globals.css
+++ b/packages/app/styles/globals.css
@@ -238,12 +238,8 @@ border-radius: 8px;
   100% { -webkit-transform: rotate(360deg); }
 }
 
-/* .mobileTutorialSlider .slick-slider {
-	height: 100%;
+@media screen and (min-width:1000px) and (max-width:1200px){
+html{
+	font-size:14px;
 }
-.mobileTutorialSlider .slick-list {
-	height: 100%;
 }
-.mobileTutorialSlider .slick-track {
-	height: 100%;
-} */
